Botão de confirmação criado

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
             </div>
         </div>
     </header>
+    <main>
+
+    </main>
+    <footer>
+        <div class="fundo">
+            <div class="botao">
+                <button class="confirmacao">Selecione os 3 itens para fechar o pedido</button>
+            </div>
+        </div>
+    </footer>
     
 
 <script src="script.js"></script>
