Criação do conteudo principal

--- a/index.html
+++ b/index.html
@@ -18,7 +18,75 @@
         </div>
     </header>
     <main>
-
+        <div class="pratos">
+            <div><h1 class="titulo">Primeiro, seu prato</h1></div>
+            <div class="prato">
+                <div class="itens">
+                    <div class="item">
+                        <div class="item-conteudo">
+                            <img class="img-item" src="Media/bddf3471-056d-42ac-82fb-e1efe1cff7a0.jpeg" alt="Frango empanado">
+                            <h1 class="titulo-item">Frango Yin Yang</h1>
+                            <p class="descricao-item">Um pouco de batata, um pouco de salada</p>
+                            <p>R$ 14,90</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item-conteudo">
+                            <img class="img-item" src="Media/bddf3471-056d-42ac-82fb-e1efe1cff7a0.jpeg" alt="Frango empanado">
+                            <h1 class="titulo-item">Frango Yin Yang</h1>
+                            <p class="descricao-item">Um pouco de batata, um pouco de salada</p>
+                            <p>R$ 14,90</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tipo-prato">
+                <h1 class="titulo">Agora, sua bebida</h1>
+            </div>
+            <div class="prato">
+                <div class="itens">
+                    <div class="item">
+                        <div class="item-conteudo">
+                            <img class="img-item" src="Media/Guarana.jpg" alt="Guarana">
+                            <h1 class="titulo-item">Coquinha gelada</h1>
+                            <p class="descricao-item">Lata 350ml</p>
+                            <p>R$ 4,90</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item-conteudo">
+                            <img class="img-item" src="Media/Guarana.jpg" alt="Guarana">
+                            <h1 class="titulo-item">Coquinha gelada</h1>
+                            <p class="descricao-item">Lata 350ml</p>
+                            <p>R$ 4,90</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tipo-prato">
+                <h1 class="titulo">Por fim, sua sobremesa</h1>
+            </div>
+            <div class="prato">
+                <div class="itens">
+                    <div class="item">
+                        <div class="item-conteudo">
+                            <img class="img-item" src="Media/pudim.jpg" alt="Guarana">
+                            <h1 class="titulo-item">Pudim</h1>
+                            <p class="descricao-item">Apenas pudim</p>
+                            <p>R$ 7,90</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item-conteudo">
+                            <img class="img-item" src="Media/pudim.jpg" alt="Guarana">
+                            <h1 class="titulo-item">Pudim</h1>
+                            <p class="descricao-item">Apenas pudim</p>
+                            <p>R$ 7,90</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="fundo">
