--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div><h1 class="titulo">Primeiro, seu prato</h1></div>
             <div class="prato">
                 <div class="itens">
-                    <div class="item">
+                    <div onclick="escolherParmegiana()" class="item parmegiana">
                         <div class="item-conteudo">
                             <img class="img-item" src="Media/bddf3471-056d-42ac-82fb-e1efe1cff7a0.jpeg" alt="Frango empanado">
                             <h1 class="titulo-item">Frango Yin Yang</h1>
@@ -30,7 +30,7 @@
                             <p>R$ 14,90</p>
                         </div>
                     </div>
-                    <div class="item">
+                    <div onclick="escolherEmpanado()" class="item empanado">
                         <div class="item-conteudo">
                             <img class="img-item" src="Media/bddf3471-056d-42ac-82fb-e1efe1cff7a0.jpeg" alt="Frango empanado">
                             <h1 class="titulo-item">Frango Yin Yang</h1>
@@ -45,7 +45,7 @@
             </div>
             <div class="prato">
                 <div class="itens">
-                    <div class="item">
+                    <div onclick="escolherGuarana()" class="item guarana">
                         <div class="item-conteudo">
                             <img class="img-item" src="Media/Guarana.jpg" alt="Guarana">
                             <h1 class="titulo-item">Coquinha gelada</h1>
@@ -53,7 +53,7 @@
                             <p>R$ 4,90</p>
                         </div>
                     </div>
-                    <div class="item">
+                    <div onclick="escolherCoca()" class="item coca">
                         <div class="item-conteudo">
                             <img class="img-item" src="Media/Guarana.jpg" alt="Guarana">
                             <h1 class="titulo-item">Coquinha gelada</h1>
@@ -68,7 +68,7 @@
             </div>
             <div class="prato">
                 <div class="itens">
-                    <div class="item">
+                    <div onclick="escolherPudim()" class="item pudim">
                         <div class="item-conteudo">
                             <img class="img-item" src="Media/pudim.jpg" alt="Guarana">
                             <h1 class="titulo-item">Pudim</h1>
@@ -76,7 +76,7 @@
                             <p>R$ 7,90</p>
                         </div>
                     </div>
-                    <div class="item">
+                    <div onclick="escolherPave()" class="item pave">
                         <div class="item-conteudo">
                             <img class="img-item" src="Media/pudim.jpg" alt="Guarana">
                             <h1 class="titulo-item">Pudim</h1>
@@ -91,12 +91,12 @@
     <footer>
         <div class="fundo">
             <div class="botao">
-                <button class="confirmacao">Selecione os 3 itens para fechar o pedido</button>
+                <button onclick="fecharPedido()" class="confirmacao"><p>Selecione os 3 itens para fechar o pedido</p></button>
             </div>
         </div>
     </footer>
     
 
-<script src="script.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
