--- a/index.html
+++ b/index.html
@@ -27,29 +27,32 @@
         <div class="pratos">
             <div><h1 class="tituloPrato">Primeiro, seu prato</h1></div>
             <div class="prato">
-                <div class="itens">
-                    <div onclick="escolherParmegiana()" class="item parmegiana">
+                <div class="itens" data-identifier="dishes">
+                    <div onclick="escolherEmpanado()" class="item empanado" data-identifier="food-option">
                         <div class="item-conteudo">
                             <img class="img-item" src="Media/Empanado.jpg" alt="Frango empanado">
-                            <h1 class="titulo-item">Frango Empanado</h1>
+                            <h1 class="titulo-item" data-identifier="food-title">Frango Empanado</h1>
                             <p class="descricao-item">Um pouco de batata,<br> um pouco de salada</p>
-                            <p class="preco">R$ 10,00</p>
+                            <p class="preco" data-identifier="food-price">R$ 10,00</p>
+                            <ion-icon class="icone-prato1" name="checkmark-circle"></ion-icon>
                         </div>
                     </div>
-                    <div onclick="escolherEmpanado()" class="item empanado">
+                    <div onclick="escolherParmegiana()" class="item parmegiana" data-identifier="food-option">
                         <div class="item-conteudo">
                             <img class="img-item" src="Media/Parmegiana.jpg" alt="Frango Parmegiana">
-                            <h1 class="titulo-item">Frango Parmegiana</h1>
+                            <h1 class="titulo-item" data-identifier="food-title">Frango Parmegiana</h1>
                             <p class="descricao-item">Um pouco de batata,<br> um pouco de salada</p>
-                            <p class="preco">R$ 12,00</p>
+                            <p class="preco" data-identifier="food-price">R$ 12,00</p>
+                            <ion-icon class="icone-prato2" name="checkmark-circle"></ion-icon>
                         </div>
                     </div>
-                    <div onclick="escolherGrelhado()" class="item grelhado">
+                    <div onclick="escolherGrelhado()" class="item grelhado" data-identifier="food-option">
                         <div class="item-conteudo">
                             <img class="img-item" src="Media/Grelhado.png" alt="Frango Grelhado">
-                            <h1 class="titulo-item">Frango Parmegiana</h1>
+                            <h1 class="titulo-item" data-identifier="food-title">Frango Parmegiana</h1>
                             <p class="descricao-item">Um pouco de batata,<br> um pouco de salada</p>
-                            <p class="preco">R$ 12,00</p>
+                            <p class="preco" data-identifier="food-price">R$ 12,00</p>
+                            <ion-icon class="icone-prato3" name="checkmark-circle"></ion-icon>
                         </div>
                     </div>
                 </div>
@@ -58,29 +61,32 @@
                 <h1 class="tituloPrato">Agora, sua bebida</h1>
             </div>
             <div class="prato">
-                <div class="itens">
-                    <div onclick="escolherGuarana()" class="item guarana">
+                <div class="itens" data-identifier="drinks">
+                    <div onclick="escolherGuarana()" class="item guarana" data-identifier="food-option">
                         <div class="item-conteudo">
                             <img class="img-item" src="Media/Guarana.jpg" alt="Guarana">
-                            <h1 class="titulo-item">Guarana gelado</h1>
+                            <h1 class="titulo-item" data-identifier="food-title">Guarana gelado</h1>
                             <p class="descricao-item">Lata 350ml</p>
-                            <p class="preco">R$ 5,00</p>
+                            <p class="preco" data-identifier="food-price">R$ 5,00</p>
+                            <ion-icon class="icone-bebida1" name="checkmark-circle"></ion-icon>
                         </div>
                     </div>
-                    <div onclick="escolherCoca()" class="item coca">
+                    <div onclick="escolherCoca()" class="item coca" data-identifier="food-option">
                         <div class="item-conteudo">
                             <img class="img-item" src="Media/Coca.png" alt="Coca">
-                            <h1 class="titulo-item">Coquinha gelada</h1>
+                            <h1 class="titulo-item" data-identifier="food-title">Coquinha gelada</h1>
                             <p class="descricao-item">Lata 350ml</p>
-                            <p class="preco">R$ 6,00</p>
+                            <p class="preco" data-identifier="food-price">R$ 6,00</p>
+                            <ion-icon class="icone-bebida2" name="checkmark-circle"></ion-icon>
                         </div>
                     </div>
-                    <div onclick="escolherPepsi()" class="item pepsi">
+                    <div onclick="escolherPepsi()" class="item pepsi" data-identifier="food-option">
                         <div class="item-conteudo">
                             <img class="img-item" src="Media/pepsi.jpg" alt="Pepsi">
-                            <h1 class="titulo-item">Guarana gelado</h1>
+                            <h1 class="titulo-item" data-identifier="food-title">Guarana gelado</h1>
                             <p class="descricao-item">Lata 350ml</p>
-                            <p class="preco">R$ 6,00</p>
+                            <p class="preco" data-identifier="food-price">R$ 6,00</p>
+                            <ion-icon class="icone-bebida3" name="checkmark-circle"></ion-icon>
                         </div>
                     </div>
                 </div>
@@ -89,29 +95,32 @@
                 <h1 class="tituloPrato">Por fim, sua sobremesa</h1>
             </div>
             <div class="prato">
-                <div class="itens">
-                    <div onclick="escolherPudim()" class="item pudim">
+                <div class="itens" data-identifier="desserts">
+                    <div onclick="escolherPudim()" class="item pudim" data-identifier="food-option">
                         <div class="item-conteudo">
                             <img class="img-item" src="Media/pudim.jpg" alt="Pudim">
-                            <h1 class="titulo-item">Pudim</h1>
+                            <h1 class="titulo-item" data-identifier="food-title">Pudim</h1>
                             <p class="descricao-item">Apenas pudim</p>
-                            <p class="preco">R$ 8,00</p>
+                            <p class="preco" data-identifier="food-price">R$ 8,00</p>
+                            <ion-icon class="icone-sobremesa1" name="checkmark-circle"></ion-icon>
                         </div>
                     </div>
-                    <div onclick="escolherPave()" class="item pave">
+                    <div onclick="escolherPave()" class="item pave" data-identifier="food-option">
                         <div class="item-conteudo">
                             <img class="img-item" src="Media/Pave.jpg" alt="Pavê">
-                            <h1 class="titulo-item">Pavê</h1>
+                            <h1 class="titulo-item" data-identifier="food-title">Pavê</h1>
                             <p class="descricao-item">Apenas pavê<br>(não pra comer)</p>
-                            <p class="preco">R$ 10,00</p>
+                            <p class="preco" data-identifier="food-price">R$ 10,00</p>
+                            <ion-icon class="icone-sobremesa2" name="checkmark-circle"></ion-icon>
                         </div>
                     </div>
-                    <div onclick="escolherBolo()" class="item bolo">
+                    <div onclick="escolherBolo()" class="item bolo" data-identifier="food-option">
                         <div class="item-conteudo">
                             <img class="img-item" src="Media/bolo.jpg" alt="Bolo">
-                            <h1 class="titulo-item">Pavê</h1>
+                            <h1 class="titulo-item" data-identifier="food-title">Pavê</h1>
                             <p class="descricao-item">Apenas pavê<br> (não pra comer)</p>
-                            <p class="preco">R$ 10,00</p>
+                            <p class="preco" data-identifier="food-price">R$ 10,00</p>
+                            <ion-icon class="icone-sobremesa3" name="checkmark-circle"></ion-icon>
                         </div>
                     </div>
                 </div>
@@ -128,5 +137,7 @@
     
 
 <script type="text/javascript" src="script.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
