Correção de texto

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div onclick="escolherGrelhado()" class="item grelhado" data-identifier="food-option">
                         <div class="item-conteudo">
                             <img class="img-item" src="Media/Grelhado.png" alt="Frango Grelhado">
-                            <h1 class="titulo-item" data-identifier="food-title">Frango Parmegiana</h1>
+                            <h1 class="titulo-item" data-identifier="food-title">Frango Grelhado</h1>
                             <p class="descricao-item">Um pouco de batata,<br> um pouco de salada</p>
                             <p class="preco" data-identifier="food-price">R$ 12,00</p>
                             <ion-icon class="icone-prato3" name="checkmark-circle"></ion-icon>
@@ -83,7 +83,7 @@
                     <div onclick="escolherPepsi()" class="item pepsi" data-identifier="food-option">
                         <div class="item-conteudo">
                             <img class="img-item" src="Media/pepsi.jpg" alt="Pepsi">
-                            <h1 class="titulo-item" data-identifier="food-title">Guarana gelado</h1>
+                            <h1 class="titulo-item" data-identifier="food-title">Pepsi gelada</h1>
                             <p class="descricao-item">Lata 350ml</p>
                             <p class="preco" data-identifier="food-price">R$ 6,00</p>
                             <ion-icon class="icone-bebida3" name="checkmark-circle"></ion-icon>
@@ -117,8 +117,8 @@
                     <div onclick="escolherBolo()" class="item bolo" data-identifier="food-option">
                         <div class="item-conteudo">
                             <img class="img-item" src="Media/bolo.jpg" alt="Bolo">
-                            <h1 class="titulo-item" data-identifier="food-title">Pavê</h1>
-                            <p class="descricao-item">Apenas pavê<br> (não pra comer)</p>
+                            <h1 class="titulo-item" data-identifier="food-title">Bolo</h1>
+                            <p class="descricao-item">Apenas bolo</p>
                             <p class="preco" data-identifier="food-price">R$ 10,00</p>
                             <ion-icon class="icone-sobremesa3" name="checkmark-circle"></ion-icon>
                         </div>
